--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,9 @@
     <string name="welcome_text">Welcome to Book Swap</string>
     <string name="login">Sign in</string>
     <string name="register_text"><u>Register</u></string>
+    <string name="old_password">Old password</string>
+    <string name="new_password">New password</string>
+    <string name="apply">Apply</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
