--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="description_not_found">Could not find description</string>
     <string name="page_count_not_found">TBD</string>
     <string name="language_not_found">TBE</string>
+    <string name="like_message">%1s likes your book \'%2s\'</string>
 </resources>
