--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="button_send">Send</string>
     <string name="discover">Discover</string>
     <string name="likes">Likes</string>
+    <string name="notifications">Notifications</string>
     <string name="chats">Chats</string>
     <string name="profile">Profile</string>
     <!-- TODO: Remove or change this placeholder text -->
@@ -39,4 +40,5 @@
     <string name="button_to_unmatch_users">Button to unmatch users</string>
     <string name="swap">swap</string>
     <string name="button_to_swap_books">Button to swap books</string>
+    <string name="swap_user_text">Choose one of %s\'s books</string>
 </resources>
