Added maps and videos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="search">Search</string>
     <string name="search_hint">Hint</string>
     <string name="share">Share</string>
+    <string name="showOnMap">Show on map</string>
 </resources>
